# EasyGS

./: .gitignore  README.md  Trainer.py  __init__.py  callbacks.py  checkpoint.py  cli.py  colmap_io.py  config.py  data.py  git.sh  losses.py  outputs.py  pyproject.toml  requirements.txt
examples/: optimize_camera.py  train_colmap.py
gaussian_renderer/: __init__.py
scene/: cameras.py  dataset_readers.py  gaussian_model.py
srcipts/: fit_sh.py  optimize_cam_para.py  render_test.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h
utils/: general_utils.py  graphics_utils.py  loss_utils.py
